# elisa-test

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
resources/: math.typ
src/: app.rs  logistic_regression.rs  main.rs
src/ui/: assay.rs  mod.rs  plot.rs
